--- a/theme/package.json
+++ b/theme/package.json
@@ -26,6 +26,7 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
+    "gatsby": "^2.19.16",
     "gatsby-plugin-offline": "^2.2.4",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.2",
     "gatsby-plugin-react-helmet": "^3.1.2",
